# notebooks

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
shared/: confg.py  database.py
shared/utils/: backup.py  paths.py
smyrooms/: config.py  distributor_client.py  test.ipynb
smyrooms/client/: distributor.py  distributor_client.py
smyrooms/data/: README.md
smyrooms/notebooks/: analysis.ipynb
smyrooms/notebooks/analysis/: sandbox.ipynb
smyrooms/notebooks/operations/: task__remove_credentials_from_rules.ipynb
